<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="add_icon"></string>
    <string name="join_tribe_link">Join Tribe Link</string>
    <string name="add_friend">Add Friend</string>
    <string name="add_tribe">Add Tribe</string>
    <string name="discover_tags">Tags</string>
    <string name="discover_open">Open</string>
    <string name="create_tribe">Create Tribe</string>
    <string name="contacts">Contacts</string>
    <string name="profile">Profile</string>
    <string name="support">Support</string>
    <string name="add_sats">ADD SATS</string>
    <string name="search">Search</string>

    <string name="upgrade_app">UPGRADE APP</string>

    <string name="not_valid_tribe_link">QR code is not a Join Tribe link</string>
    <string name="invite_name">Invite: %s</string>
    <string name="invite_qr_code_header_name">INVITE CODE</string>

    <string name="alert_confirm_pay_invite_title">Pay Invite</string>
    <string name="alert_confirm_pay_invite_message">Are you sure you want to pay %d sat for this invite?</string>
    <string name="pay_invite_balance_too_low">"Can't pay invite. Balance is too low"</string>

    <string name="alert_confirm_delete_invite_title">Delete Invite</string>
    <string name="alert_confirm_delete_invite_message">Are you sure you want to delete this invite?</string>

    <string name="paste_invoice_of_tribe_link">Paste Invoice or Join Tribe Link</string>
    <string name="paste_invoice_or_public_key">Invoice or Public Key</string>
    <string name="alert_confirm_pay_invoice_title">Pay Invoice</string>
    <string name="alert_confirm_pay_invoice_message">Are you sure you want to pay scanned invoice?\n\nAmount: %d sat\n\nMemo: %s</string>

    <string name="payment_request_missing_amount">Payment request is missing amount</string>
    <string name="not_valid_invoice_or_tribe_link">QR code is not a lightning invoice or Join Tribe link</string>

    <string name="attempting_payment_request">Attempting Payment Request</string>
    <string name="failed_to_pay_request">Failed to pay request</string>
    <string name="successfully_paid_invoice">Successfully paid invoice</string>

    <string name="last_message_description_message_deleted">Message deleted</string>
    <string name="last_message_description_you">You</string>
    <string name="last_message_description_gif_shared">%sGIF shared</string>
    <string name="last_message_description_boost">%sBoost %s</string>
    <string name="last_message_description_call_invite">%sJoin Call</string>
    <string name="last_message_description_invoice_sent">Invoice Sent: %s</string>
    <string name="last_message_description_invoice_receive">Invoice Received: %s</string>
    <string name="last_message_description_payment_sent">Payment Sent: %s</string>
    <string name="last_message_description_tribe_payment_sent">Payment of %s sent to %s</string>
    <string name="last_message_description_payment_received">Payment Received: %s</string>
    <string name="last_message_description_tribe_payment">%s sent a payment of %s to %s</string>

    <string name="last_message_description_sent">sent</string>
    <string name="last_message_description_an_audio_clip">an Audio Clip</string>
    <string name="last_message_description_a_gif">a Gif</string>
    <string name="last_message_description_an_image">an Image</string>
    <string name="last_message_description_a_pdf">a PDF</string>
    <string name="last_message_description_a_paid_message">a Paid Message</string>
    <string name="last_message_description_an_attachment">an Attachment</string>
    <string name="last_message_description_a_video">a Video</string>

    <string name="last_message_description_has_join_tribe">%s has joined the tribe</string>
    <string name="last_message_description_just_left_tribe">%s just left the tribe</string>
    <string name="last_message_description_wants_to_join">%s wants to join the tribe</string>
    <string name="last_message_description_declined_request_from">You have declined the request from %s</string>
    <string name="last_message_description_approved_request_from">You have approved the request from %s</string>
    <string name="last_message_description_admin_declined_request">The admin declined your request</string>
    <string name="last_message_description_welcome_member">Welcome! You’re now a member</string>
    <string name="last_message_description_group_kick">The admin has removed you from this group</string>
    <string name="last_message_description_tribe_deleted">The admin deleted this tribe</string>

    <string name="last_message_description_invite">Invite: %s</string>
    <string name="last_message_description_looking_available_node">Looking for an available node for %s</string>
    <string name="last_message_description_invite_ready">Ready! Tap to share. Expires in 24 hrs</string>
    <string name="last_message_description_invite_signing_on">%s is signing on</string>
    <string name="last_message_description_invite_tap_to_pay">Tap to pay and activate the invite</string>
    <string name="last_message_description_invite_payment_sent">Payment sent. Waiting confirmation</string>
    <string name="last_message_description_invite_signup_complete">Signup complete</string>
    <string name="last_message_description_invite_expired">Expired</string>

    <!-- Deep link authorize popup -->
    <string name="dashboard_authorize_popup_title">Do you want to authorize with:</string>
    <string name="dashboard_authorize_button">AUTHORIZE</string>
    <string name="dashboard_authorize_generic_error">Something went wrong while authorizing external source, please try again later</string>

    <string name="dashboard_redeem_sats_popup_title">Redeem %s sats from:</string>
    <string name="dashboard_redeem_sats_button">Confirm</string>

    <string name="dashboard_connect_button">CONNECT</string>
    <string name="dashboard_connect_price_to_meet">Price to meet: %s</string>
    <string name="dashboard_connect_description_missing">No description</string>
    <string name="dashboard_connect_initial_message_hint">Initial message to %s</string>
    <string name="dashboard_connect_retrieve_person_data_error">Failed to retrieve person information</string>
    <string name="dashboard_connect_message_empty">Message can not be empty</string>
    <string name="dashboard_connect_generic_error">Something went wrong while connecting to user, please try again later</string>

    <string name="dashboard_network_disconnected_node_toast">Disconnected node</string>
    <string name="dashboard_network_connected_node_toast">Connected node</string>
    <string name="dashboard_network_disconnected_mqtt_toast">MQTT Disconnected</string>
    <string name="dashboard_network_connected_mqtt_toast">MQTT Connected</string>


    <string name="dashboard_save_profile_popup_title">Save Profile from:</string>
    <string name="dashboard_delete_profile_popup_title">Delete Profile from:</string>
    <string name="dashboard_save_profile_button">SAVE</string>
    <string name="dashboard_delete_profile_button">DELETE</string>
    <string name="dashboard_save_profile_generic_error">Request attempt failed</string>
    <string name="dashboard_save_profile_success">Profile successfully saved</string>
    <string name="dashboard_delete_profile_generic_error">Could not Delete Profile</string>
    <string name="dashboard_delete_profile_success">Profile successfully deleted</string>

    <string name="dashboard_redeem_badge_token_popup_title">Redeem Badge Token from:</string>
    <string name="dashboard_redeem_badge_token_generic_error">Could not Redeem Badge Token</string>
    <string name="dashboard_redeem_badge_token_success">Redeemed Badge Token successfully</string>

    <string name="dashboard_feed_tab_name">Feed</string>
    <string name="dashboard_friends_tab_name">Friends</string>
    <string name="dashboard_tribes_tab_name">Tribes</string>

    <string name="all">All</string>
    <string name="listen">Listen</string>
    <string name="watch">Watch</string>
    <string name="read">Read</string>
    <string name="play">Play</string>
    <string name="listen_now">Listen Now</string>
    <string name="following">Following</string>
    <string name="recently_released">Recently Released</string>
    <string name="recently_published">Recently Published</string>
    <string name="recently_played">Recently Played</string>
    <string name="recently_read">Recently Read</string>
    <string name="read_now">Read Now</string>
    <string name="watch_now">Watch Now</string>
    <string name="downloaded">Downloaded Content</string>


    <string name="recommendations">Recommendations</string>

    <string name="all_place_holder">No \"Feed\" Results Found</string>
    <string name="listen_place_holder">No \"Listen\" Results Found</string>
    <string name="watch_place_holder">No \"Watch\" Results Found</string>
    <string name="read_place_holder">No \"Read\" Results Found</string>
    <string name="play_place_holder">No \"Play\" Results Found</string>

    <string name="feed_search_placeholder_1">Search over</string>
    <string name="feed_search_placeholder_2">your subscribed feeds</string>

    <string name="feed_search_result_load_error">Something went wrong while loading feed content, please try again later</string>

    <string name="video_search_placeholder_1">Search over</string>
    <string name="video_search_placeholder_2">thousand of videos</string>
    <string name="video_search_placeholder_3">on Youtube</string>

    <string name="podcast_search_placeholder_1">Search over</string>
    <string name="podcast_search_placeholder_2">4 000 000 podcasts</string>
    <string name="podcast_search_placeholder_3">on the Podcast Index</string>

    <string name="dashboard_restore_progress">Restoring: %s</string>
    <string name="dashboard_restore_progress_contacts">Restoring Contacts: %s</string>
    <string name="dashboard_restore_progress_feeds">Restoring Feeds: %s</string>
    <string name="dashboard_restore_progress_messages">Restoring Messages: %s</string>
    <string name="dashboard_stop_restore">Continue later</string>

    <string name="loading_recommendations">Loading Recommendations...</string>
    <string name="refresh_while_loading">You can\'t get new recommendations while playing them. Please stop playing before refreshing</string>


    <string name="time_left">%s left</string>

    <string name="dashboard_invite_code_screen">INVITE CODE</string>


</resources>

