<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll_view_content"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/headerBG">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/default_layout_margin"
            android:paddingBottom="@dimen/feed_fragment_bottom_padding">

            <TextView
                android:id="@+id/text_view_read_now_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_layout_margin"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/recently_published"
                android:textSize="@dimen/default_text_size_large_title"
                android:textColor="@color/text"
                android:gravity="center"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/material_icons_regular"
                android:text="@string/material_icon_name_chevron_right_button"
                android:textColor="@color/text"
                android:textSize="@dimen/default_text_size_large_title_chevron_icon"
                app:layout_constraintBottom_toBottomOf="@+id/text_view_read_now_header"
                app:layout_constraintStart_toEndOf="@+id/text_view_read_now_header" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_read_now"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/default_layout_margin"
                android:paddingStart="@dimen/default_half_layout_margin"
                android:paddingEnd="@dimen/default_half_layout_margin"
                android:clipToPadding="false"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintTop_toBottomOf="@+id/text_view_read_now_header"
                tools:listitem="@layout/layout_feed_read_now_row_holder" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_constraint_recently_played"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/recycler_view_read_now">

            <TextView
                android:id="@+id/text_view_read_following_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_layout_margin"
                android:layout_marginTop="@dimen/default_layout_margin"
                android:text="@string/recently_read"
                android:textSize="@dimen/default_text_size_large_title"
                android:textColor="@color/text"
                android:fontFamily="@font/roboto_bold"
                android:gravity="center"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/material_icons_regular"
                android:text="@string/material_icon_name_chevron_right_button"
                android:textColor="@color/text"
                android:textSize="@dimen/default_text_size_large_title_chevron_icon"
                app:layout_constraintBottom_toBottomOf="@+id/text_view_read_following_header"
                app:layout_constraintStart_toEndOf="@+id/text_view_read_following_header" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_following"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/default_layout_margin"
                android:paddingStart="@dimen/default_half_layout_margin"
                android:paddingEnd="@dimen/default_half_layout_margin"
                android:clipToPadding="false"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintTop_toBottomOf="@+id/text_view_read_following_header"
                tools:listitem="@layout/layout_feed_squared_row_holder" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <TextView
        android:id="@+id/text_view_placeholder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/read_place_holder"
        android:fontFamily="@font/roboto_medium"
        android:textSize="@dimen/dashboard_feed_placeholder_text_size"
        android:textColor="@color/text"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>